Implement Forge/NeoForge modpack support and fix reboot crash